[package]
name = "RustFinTechProjects"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0.219", features = ["derive"] }
futures = "0.3.31"
serde_json = "1.0.140"
tokio-tungstenite = {version = "0.27", features = ["native-tls-vendored"]}
tokio = { version = "1.45.1", features = ["rt", "rt-multi-thread", "macros"] }
